--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-#cookie {
+#btn {
     position: absolute;
   width: 300px;
   height: 200px;
@@ -12,8 +12,15 @@
   background: red;
   }
   </style>
+  <script>
+      clicks = 0;
+function clickBtn() {
+clicks = clicks=+1;
+}
+    </script>
   <title>Button Clicker Beta</title>
   </head>
 <body>
+    <button id="btn">CLICK</button>
   </body>
 </html>
