--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   top: 50%;
   left: 50%;
   margin: -100px 0 0 -150px;
-  background: red;
   }
   </style>
   <script>
@@ -21,6 +20,6 @@ clicks = clicks=+1;
   <title>Button Clicker Beta</title>
   </head>
 <body>
-    <button id="btn">CLICK</button>
+    <button onclick="clickBtn()" id="btn">CLICK</button>
   </body>
 </html>
