--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ clicks = clicks=+1;
 function calcClks() {
 document.getElementById("clicks").innerHTML = clicks;
 }
-      setinterval(calcClks, 100, true);
+      setInterval(calcClks, 100, true);
     </script>
   <title>Button Clicker Beta</title>
   </head>
