--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script>
       clicks = 0;
 function clickBtn() {
-clicks = clicks=+1;
+clicks = clicks+=1;
 }
 function calcClks() {
 document.getElementById("clicks").innerHTML = clicks;
