--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   left: 50%;
   margin: -100px 0 0 -150px;
   }
+    #btn {
+        width:100;
+        height:100;
+    }
   </style>
   <script>
       clicks = 0;
