--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ document.getElementById("clicks").innerHTML = clicks;
   </head>
 <body>
     <div id="btn_CONTAINER">
+    <center>
     <h1 id="clicks">0</h1>
     <button onclick="clickBtn()" id="btn">CLICK</button>
+        </center>
     </div>
   </body>
 </html>
